@@ -30,10 +30,6 @@
 
 #include "font.h"
 
-#ifdef _WIN32
-	#include <WTypes.h>
-#endif
-
 #include <GL/gl.h>
 #include <iostream>
 
