@@ -1,8 +1,11 @@
 
 2005-03-01  Volker Stroebel <volker@planetpenguin.de>
 	* src/configuration.*
-	fix keyhandling in configuration
-
+	fixed keyhandling in configuration
+	
+	* src/ppgltk/font.*
+	fixed windows build
+	
 === ppracer 0.3.1 ===
 
 2005-02-28  Volker Stroebel <volker@planetpenguin.de>
